# tech-debt-assassin

./: .gitignore  ARCHITECTURE.md  README.md  app.py  main.py  messy_code.py  messy_inventory.py  pyproject.toml
.github/workflows/: ci.yml
demo/: api_helpers.py  data_processor.py  math_helpers.py  string_utils.py  validators.py
src/: __init__.py  generator.py  mcp_server.py  scanner.py  verifier.py
tests/: test_generator.py  test_scanner.py  test_verifier.py
