[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-debt-assassin"
version = "0.1.0"
description = "Scans a codebase to automatically add missing type hints and generate unit tests."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "libcst>=1.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
tech-debt-assassin = "main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
